Fix issue with elements overlapping

--- a/styles/style.css
+++ b/styles/style.css
@@ -166,6 +166,7 @@ a {
     position: fixed;
     top: 0px;
     right: 15px;
+    z-index: 10000;
 }
 
 #dark-mode-btn {
